2002-02-09  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* lib/widgets.c: Fixed font reselection problem and first font
	bogus warning.

	* objects/UML/actor.c (actor_update_data): Changed to have
	connection points below text.

2002-02-08  Akira TAGOH  <tagoh@redhat.com>

	* lib/text.c (text_split_line): use g_strndup() instead of g_malloc()
	and memcpy().

2002-02-07  Akira TAGOH  <tagoh@redhat.com>

	* lib/font.c (font_get_suckfont): rewrited. generating suckfont from
	strings which is given.
	(suck_font): remove. it's any longer needed.

	* app/render_libart.c (set_font): don't get suckfont.
	(draw_string): get suckfont only which is needed for now.

2002-02-05  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* lib/text.c: Fixes for misunderstood width functions.

2002-02-05  Hans Breuer  <hans@breuer.org>

	* lib/dia_xml.c : use g_strconcat() instead of 
	malloc, strcpy, strcat dance
	* app/properties.c : same here and plug memory leak
	(gtk functions don't eat strings)

	* objects/UML/message.c : there is no g_sprintf()
	use g_strdup_printf() instead ...

2002-02-05  Akira TAGOH  <tagoh@redhat.com>

	* lib/message.c (gtk_message_internal): doesn't need to convert to
	UTF-8.

	* app/render_libart.c (draw_string): fixed transaction for UTF-8
	support.
	(get_text_width): ditto.

	* app/Makefile.am (EXTRA_DIST):
	s/paginate_gdiprint.c/paginate_gdiprint.cpp/

	* app/render_gdk.c (gdk_freetype_copy_glyph): fixed build issue.
	This function needs ifdef HAVE_FREETYPE because don't use it for
	--disable-freetype

2002-02-04  Cyrille Chepelov  <cyrille@chepelov.org>

	* NEWS: updated with the new dependencies.
        
	Patch from Matthieu Sozeau <mattam@netcourrier.com>:

        * objects/UML/class.h:
        * objects/UML/class.c:  
        * objects/UML/class_dialog.c: added code to handle the UMLParameterKind
        property using a GtkMenu. Options are Undefined, In, Out, In & Out
