@@ -1,3 +1,7 @@
+2002-02-10  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>
+
+	* app/export_png.c: Added dialog asking for export size.
+
 2002-02-09  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>
 
 	* lib/widgets.c: Fixed font reselection problem and first font
